# TG_FASTAPI

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requierments.txt  requirements.txt
app/: crud.py  logger_config.py  main.py  posts_api.py  schemas.py
app/auth/: auth_api.py
app/posts/: crud.py  posts_api.py
app/schemas/: posts.py  users.py
app/security/: jwt_auth.py
app/users/: users_api.py
bot/: api_client.py  keyboards.py  main.py  posts.py  utils.py
configs/: logger_config.py  tortoise_config.py
db/: models.py
migrations/models/: 0_20250608113329_init.py  1_20250608151135_update.py  2_20250609152131_update.py
