[project]
name = "tg-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Sweet_Sempai",email = "chcolatemilk00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tortoise-orm[asyncpg] (>=0.25.1,<0.26.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
