[project]
name = "tg-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Sweet_Sempai",email = "chcolatemilk00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tortoise-orm[asyncpg] (>=0.25.1,<0.26.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "aerich[toml] (>=0.9.0,<0.10.0)",
    "python-telegram-bot (>=22.1,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app", "bot", "db"]
known_third_party = ["fastapi", "pydantic", "uvicorn", "python_telegram_bot"]
skip = [".venv", "migrations", "__init__.py"]
